# haskell_stuff

./: .gitignore  LICENSE  README.md  cabal.project.freeze  cwparser.cabal
src/: AdditionAssoc.hs  ApplicativeParser.hs  Blocked.hs  Blocked2.hs  CP.hs  Commute.hs  Complex.hs  ConvertCase.hs  FreePlated.hs  ISO.hs  JsonParser.hs  KnightTour.hs  NMEA.hs  OddsAndEvens.hs  ProperFractions.hs  Roman.hs  SKI.hs  ScottEncoding.hs  SimpleAssembler.hs  SimpleLens.hs  SimpleTokenizer.hs  Smallfuck.hs  Smallfuck2.hs  Stream.hs  StringExpansion.hs  TargetGame.hs  TimesComm.hs  TimesThreeOrPlusFive.hs  TupleMaker.hs  UnlimitedGameOfLife.hs  Vector.hs  WordBreak.hs  YonedaLemma.hs  binpack.hs  braces.hs  calculator.hs  church.hs  church2.hs  coroutine.hs  idiot  (+17 more)
