name:                cwparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Acaccia/cwparser#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Caccia
maintainer:          acaccia@ulb.ac.be
copyright:           2017 Anthony Caccia
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cwparser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , array
                     , mtl
                     , vector
                     , dlist
                     , bytestring
                     , transformers
                     , template-haskell
                     , lens
                     , free
                     , comonad
                     , stm
                     , async
                     , split
                     , parallel
                     , contravariant
                     , deepseq